# pixelguard

./: .gitignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  claude.md  commitlint.config.js  commitlint.config.mjs  package.json
.changeset/: README.md  config.json  initial-release.md
.github/workflows/: ci.yml  visual-regression.yml
.husky/: commit-msg  pre-commit
crates/pixelguard-cli/: Cargo.toml
crates/pixelguard-cli/src/: main.rs
crates/pixelguard-cli/src/commands/: apply.rs  init.rs  list.rs  mod.rs  plugins.rs  review.rs  serve.rs  test.rs  validate.rs
crates/pixelguard-cli/tests/: integration_tests.rs
crates/pixelguard-core/: Cargo.toml
crates/pixelguard-core/src/: capture.rs  config.rs  detect.rs  diff.rs  lib.rs  report.rs  storage.rs
crates/pixelguard-core/src/plugins/: discovery.rs  executor.rs  loader.rs  mod.rs  registry.rs  types.rs
docs/: architecture.md  baseline-strategy.md  ci-setup.md  configuration.md  creating-plugins.md  getting-started.md  performance.md  plugins.md  publishing.md  troubleshooting.md
examples/: README.md
examples/astro-site/: README.md  package.json  pixelguard.config.json
examples/astro-site/.astro/: settings.json
examples/astro-site/src/layouts/: Layout.astro
examples/astro-site/src/pages/: about.astro  contact.astro  index.astro
examples/multi-viewport/: README.md  index.html  package.json  pixelguard.config.json
examples/multi-viewport/.pixelguard/: report.html  results.json
examples/multi-viewport/src/: index.css  main.tsx
examples/multi-viewport/src/components/: Layout.tsx
examples/multi-viewport/src/pages/: Features.tsx  Home.tsx  Pricing.tsx
examples/nextjs-app/: README.md  package.json  pixelguard.config.json
examples/nextjs-app/.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
examples/nextjs-app/.next/cache/: .rscinfo
examples/nextjs-app/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
examples/nextjs-app/.next/types/: routes.d.ts  (+2 more)
examples/plugins/: README.md
examples/plugins/pixelguard-plugin-console-notifier/: README.md  package.json
examples/plugins/pixelguard-plugin-json-reporter/: README.md  package.json
examples/plugins/pixelguard-plugin-puppeteer-capture/: README.md  package.json
examples/plugins/pixelguard-plugin-s3-storage/: README.md  package.json
examples/plugins/pixelguard-plugin-slack-notifier/: README.md  package.json
examples/plugins/pixelguard-plugin-ssim-differ/: README.md  package.json
examples/storybook-react/: .gitkeep  README.md  package.json  pixelguard.config.json  pixelguard.plugins.config.json
examples/storybook-react/.storybook/: main.js  preview.js
examples/storybook-react/src/: main.jsx  styles.css
examples/storybook-vite/: .gitignore  README.md  index.html  package.json
examples/storybook-vite/.pixelguard/: report.html  results.json
examples/storybook-vite/.storybook/: main.js
examples/storybook-vite/src/: main.jsx
examples/storybook-vite/storybook-static/: iframe.html  index.json  project.json
examples/vite-react/: README.md  index.html  package.json  pixelguard.config.json
examples/vite-react/src/: index.css  main.tsx
npm/pixelguard/: README.md  package.json
npm/pixelguard/scripts/: postinstall.js  run.js
npm/plugin-types/: package.json  tsconfig.json
npm/plugin-types/src/: capture.ts  common.ts  differ.ts  index.ts  notifier.ts  reporter.ts  storage.ts
schemas/: pixelguard.config.schema.json
scripts/: publish.sh  release.sh
tests/fixtures/: multi-viewport-config.json  valid-config.json
(+103 files in other folders)
