[workspace]
resolver = "2"
members = ["crates/pixelguard-cli", "crates/pixelguard-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/emiliodominguez/pixelguard"
authors = ["Pixelguard Contributors"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Image processing
image = "0.25"

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
walkdir = "2.5"
glob = "0.3"
tempfile = "3.15"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# Open browser
open = "5.3"
