[package]
name = "pixelguard-cli"
description = "CLI for Pixelguard visual regression testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "pixelguard"
path = "src/main.rs"

[dependencies]
pixelguard-core = { path = "../pixelguard-core" }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
open.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
