[package]
name = "pixelguard-core"
description = "Core library for Pixelguard visual regression testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
image.workspace = true
reqwest.workspace = true
tracing.workspace = true
walkdir.workspace = true
glob.workspace = true
tempfile.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
